Search bar code
 Search bar input code to the homepage, when searching a product, that specific product(s) comes up.

--- a/src/styles.css
+++ b/src/styles.css
@@ -105,3 +105,16 @@ nav a:hover {
   cursor: pointer;
   text-decoration: none;
 }
+
+.searchContainer {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.searchInputStyle {
+  width: 300px;
+  padding: 10px;
+  border-radius: 10px;
+  border-color: black;
+}
