--- a/src/styles.css
+++ b/src/styles.css
@@ -118,3 +118,8 @@ nav a:hover {
   border-radius: 10px;
   border-color: black;
 }
+
+.descriptionStyle, .priceStyle {
+  font-size: 20px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
