--- a/src/styles.css
+++ b/src/styles.css
@@ -46,11 +46,15 @@ nav a:hover {
 .inputStyle {
   width: 700px;
   padding: 5px;
+  border-radius: 10px;
+  border-color: black;
 }
 
-.textareaStyle {
+.inputBodyStyle {
   width: 700px;
   padding: 30px;
+  border-radius: 10px;
+  border-color: black;
 }
 
 .labelStyle {
@@ -67,6 +71,7 @@ nav a:hover {
   padding: 10px;
   margin: 10px;
   cursor: pointer;
+  border-radius: 10px;
 }
 
 .errorStyle {
@@ -97,13 +102,14 @@ nav a:hover {
   width: 300px;
 }
 
-.viewDetailsButton {
+.viewProductButton {
   background-color:  rgb(168, 106, 13);
   color: white;
   width: 200px;
   padding: 10px;
   cursor: pointer;
   text-decoration: none;
+  border-radius: 10px;
 }
 
 .searchContainer {
