--- a/src/styles.css
+++ b/src/styles.css
@@ -2,15 +2,29 @@
 .footerClass {
   background-color: rgb(168, 106, 13);
   color: white;
-  padding: 30px;
   text-align: center;
   font-size: 20px;
-  margin-top: 30px;
 }
 
 .headerClass, .footerClass, .navStyle {
   font-size: 1.5rem;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  background-color: rgb(168, 106, 13);
+  color: white;
+  margin-bottom: 20px;
+  padding: 20px;
+  align-items: center;
+  height: max-content;
+}
+
+footer {
+  padding: 30px;
+  margin-top: 30px;
 }
 
 .formStyle, .labelStyle, .errorStyle, .buttonStyle {
