--- a/src/styles.css
+++ b/src/styles.css
@@ -6,9 +6,11 @@
   font-size: 20px;
 }
 
-.headerClass, .footerClass, .navStyle {
+.headerClass,
+.footerClass,
+.navStyle {
   font-size: 1.5rem;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 header {
@@ -27,9 +29,12 @@ footer {
   margin-top: 30px;
 }
 
-.formStyle, .labelStyle, .errorStyle, .buttonStyle {
+.formStyle,
+.labelStyle,
+.errorStyle,
+.buttonStyle {
   font-size: 1rem;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 .navStyle {
@@ -80,7 +85,7 @@ nav a:hover {
 
 .buttonStyle {
   text-align: center;
-  background-color:  rgb(168, 106, 13);
+  background-color: rgb(168, 106, 13);
   color: white;
   width: 200px;
   padding: 10px;
@@ -122,7 +127,7 @@ nav a:hover {
 }
 
 .viewProductButton {
-  background-color:  rgb(168, 106, 13);
+  background-color: rgb(168, 106, 13);
   color: white;
   width: 200px;
   padding: 10px;
@@ -131,8 +136,9 @@ nav a:hover {
   border-radius: 10px;
 }
 
-.backHomeButton {
-  background-color:  rgb(168, 106, 13);
+.backHomeButton,
+.checkoutButton {
+  background-color: rgb(168, 106, 13);
   color: white;
   width: 200px;
   padding: 10px;
@@ -141,7 +147,9 @@ nav a:hover {
   border-radius: 10px;
 }
 
-.viewProductButton:hover, .backHomeButton:hover {
+.viewProductButton:hover,
+.backHomeButton:hover,
+.checkoutButton:hover {
   text-decoration: underline;
 }
 
@@ -158,7 +166,8 @@ nav a:hover {
   border-color: black;
 }
 
-.descriptionStyle, .priceStyle {
+.descriptionStyle,
+.priceStyle {
   font-size: 20px;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
