Created a new checkout success file
Created a new checkout success file. Created a new purchase button on the checkout page. Created a new route to the success page in the App.js file. Otherwise changed the name of the cartPage to "checkout" page. Then done some new stylings in the css file.

--- a/src/styles.css
+++ b/src/styles.css
@@ -215,3 +215,13 @@ nav a:hover {
 .titlePriceStyle {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
+
+.successH1 {
+  display: flex;
+  justify-content: center;
+}
+
+.backHomeContainer {
+  display: flex;
+  justify-content: center;
+}
