--- a/src/styles.css
+++ b/src/styles.css
@@ -225,3 +225,76 @@ nav a:hover {
   display: flex;
   justify-content: center;
 }
+
+// gggg
+
+@media only screen and (max-width: 653px) {
+  .descriptionStyle {
+    text-align: center;
+    font-size: 15px;
+  }
+
+  .cartImageStyle {
+    max-width: 200px;
+    text-align: center;
+  }
+
+  .inputStyle,
+  .inputBodyStyle {
+    max-width: 200px;
+  }
+
+  .ulStyle {
+    font-size: 0.7rem;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .navStyle {
+    font-size: 1.4rem;
+  }
+}
+
+@media only screen and (max-width: 844px) {
+  .ulStyle {
+    display: flex;
+  }
+
+  .headerClass {
+    font-size: 1rem;
+  }
+  .productContainer {
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+
+  .inputStyle,
+  .inputBodyStyle {
+    width: 300px;
+  }
+
+  .footerClass {
+    font-size: 20px;
+  }
+
+  .specificImageStyle,
+  .cartImageStyle {
+    width: 300px;
+  }
+
+  .specificProductContainer {
+    text-align: center;
+  }
+
+  .successH1 {
+    font-size: 20px;
+    text-align: center;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .productContainer {
+    grid-template-columns: 1fr 1fr;
+    text-align: center;
+  }
+}
