"show a total at the bottom" code
Added code to the "show a total at the bottom" to the specific page and the checkout pages. The user can now see the total sum of products added.

--- a/src/styles.css
+++ b/src/styles.css
@@ -226,6 +226,12 @@ nav a:hover {
   justify-content: center;
 }
 
+.totalStyle {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 20px;
+  margin: 5px;
+}
+
 @media only screen and (max-width: 653px) {
   .descriptionStyle {
     text-align: center;
