--- a/src/styles.css
+++ b/src/styles.css
@@ -227,7 +227,7 @@ nav a:hover {
 }
 
 .totalStyle {
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   font-size: 20px;
   margin: 5px;
 }
