Discount price added
Added the discount price to the products which have a discount price. Then styled it.

--- a/src/styles.css
+++ b/src/styles.css
@@ -180,6 +180,12 @@ nav a:hover {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
+.discountedPriceStyle {
+  font-size: 20px;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  color: red;
+}
+
 .cartEmptyStyle {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   font-size: 20px;
