--- a/src/styles.css
+++ b/src/styles.css
@@ -255,7 +255,13 @@ nav a:hover {
   }
 
   .ulStyle {
-    font-size: 0.7rem;
+    font-size: 0.4rem;
+  }
+}
+
+@media only screen and (max-width: 740px) {
+  .ulStyle {
+    font-size: 0.4rem;
   }
 }
 
