Size of product images updated
New code that makes the size of all the images on the homepage the same size.

--- a/src/styles.css
+++ b/src/styles.css
@@ -113,6 +113,11 @@ nav a:hover {
   gap: 20px;
 }
 
+.productImage {
+  height: 400px;
+  width: 400px;
+}
+
 .specificProductContainer,
 .cartProductContainer {
   text-align: left;
