--- a/src/styles.css
+++ b/src/styles.css
@@ -115,7 +115,8 @@ nav a:hover {
 
 .productImage {
   height: 400px;
-  width: 400px;
+  width: 100%;
+  object-fit: cover;
 }
 
 .specificProductContainer,
